cleanup + simpler wording

--- a/profiles/templates/about.html
+++ b/profiles/templates/about.html
@@ -12,8 +12,8 @@
             Es handelt sich um eine online Judo-Kämpferprofil-Verwaltung, die mehrere Trainer*innen gleichzeitug verwenden können.
             Außerdem kann auch den Judoka Zugriff zu ihren und auch zu anderen Profilen gewährt werden (durch Trainer*innen).
             Auch Trainer*innen können sich gegenseitig Lese- und Schreibzugriff zu den, von ihnen erstellten Profilen geben.
-            Zudem wird zu Beginn ein Admin eingerichtet (noch im cli), welcher alle Benutzerkonten verwalten kann und auch bei Bedarf neue Tokens erstellen, falls jemand das Passwort vergessen hat.
-            Beim Erstellen wird kein Passwort eingerichtet, welches dann geändert werden muss, sondern es wird ein Token generiert, welcher sieben Tage gültig ist, mit dem sich der/die Nutzer*in
+            Zudem wird zu Beginn ein Admin eingerichtet (noch im cli), welcher alle Benutzerkonten verwalten kann und auch bei Bedarf neue Schlüssel erstellen, falls jemand das Passwort vergessen hat.
+            Beim Erstellen wird kein Passwort eingerichtet, welches dann geändert werden muss, sondern es wird ein Schlüssel generiert, welcher sieben Tage gültig ist, mit dem sich der/die Nutzer*in
             dann ein Passwort erstellen kann und der dabei gelöscht wird, damit nur der/die Nutzer*in das Passwort kennt.
         </p>
         <h3>Technisches</h3>
