--- a/users/templates/users/new.html
+++ b/users/templates/users/new.html
@@ -13,7 +13,7 @@
             <input type="text" class="form-control" name="first_name" placeholder="Vorname" required>
             <input type="text" class="form-control my-2" name="last_name" placeholder="Nachname" required>
             <div class="d-flex justify-content-center">
-                <input type="submit" class="btn btn-secondary mt-2" value="Token erstellen">
+                <input type="submit" class="btn btn-secondary mt-2" value="Schlüssel erstellen">
             </div>
         </form>
     </div>
