--- a/profiles/templates/htmx/profile_permissions.html
+++ b/profiles/templates/htmx/profile_permissions.html
@@ -14,5 +14,9 @@
         </tr>
     {% endfor %}
 {% else %}
-    <div class="container text-center"><p>Keine passenden Nutzer*innen gefunden</p></div>
+    <tr>
+        <td>
+            <div class="mx-auto text-center">Keine passenden Nutzer*innen gefunden</div>
+        </td>
+    </tr>
 {% endif %}
