--- a/profiles/templates/profiles/manage.html
+++ b/profiles/templates/profiles/manage.html
@@ -97,8 +97,8 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="text-center">
-                        <h5 id="success" class="ms-2"></h5>
+                    <td>
+                        <div id="success" class="text-center mt-2"></div>
                     </td>
                 </tr>
             </table>
