--- a/users/templates/htmx/user_permissions.html
+++ b/users/templates/htmx/user_permissions.html
@@ -14,5 +14,9 @@
         </tr>
     {% endfor %}
 {% else %}
-    <div class="container text-center"><p>Keine Profile gefunden</p></div>
+    <tr>
+        <td>
+            <div class="mx-auto text-center">Keine Profile gefunden</div>
+        </td>
+    </tr>
 {% endif %}
