--- a/users/templates/htmx/users.html
+++ b/users/templates/htmx/users.html
@@ -27,5 +27,9 @@
         </tr>
     {% endfor %}
 {% else %}
-    <div class="container text-center"><p>Keine Nutzer*innen gefunden</p></div>
+    <tr>
+        <td colspan="2">
+            <div class="mx-auto text-center">Keine Nutzer*innen gefunden</div>
+        </td>
+    </tr>
 {% endif %}
