--- a/users/templates/users.html
+++ b/users/templates/users.html
@@ -14,7 +14,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="d-flex justify-content-center mx-auto" style="width: 32rem;">
+        <div class="d-flex justify-content-center mx-auto">
             <select id="status" name="status" class="form-select mb-2 me-2 d-inline" style="width: max-content;">
                 <option value="">Alle</option>
                 <option value="a" selected>Aktiv</option>
@@ -23,7 +23,7 @@
             <select id="type" name="type" class="form-select mb-2 d-inline" style="width: max-content;">
                 <option value="" selected>Alle</option>
                 <option value="u">Judoka</option>
-                <option value="t">Trainer*in</option>
+                <option value="t">Trainer*innen</option>
             </select>
         </div>
         <input class="form-control mx-auto" type="search"
