--- a/profiles/templates/htmx/profiles.html
+++ b/profiles/templates/htmx/profiles.html
@@ -4,18 +4,22 @@
         {% get_obj_perms request.user for i as "i_perms" %}
         <tr>
             <td><a class="link-body-emphasis link-underline-opacity-0" href="{% url "profiles-profile" i.user.username %}">{{ i }}</a>{% if request.user == i.user %} (Eigenes Profil){% endif %}</td>
-            <td>
+            <td class="text-end">
                 {% if "change_profile" in i_perms %}
                     <a class="link-body-emphasis link-underline-opacity-0" href="{% url "profiles-profile-edit" i.user.username %}">Bearbeiten</a>
                 {% endif %}
             </td>
-            <td>
+            <td class="text-end">
                 {% if "manage_profile" in i_perms %}
-                    <a class="link-body-emphasis link-underline-opacity-0" href="{% url "profiles-profile-manage" i.user.username %}">Zugriff verwalten</a>
+                    <a class="link-body-emphasis link-underline-opacity-0 me-1" href="{% url "profiles-profile-manage" i.user.username %}">Zugriff verwalten</a>
                 {% endif %}
             </td>
         </tr>
     {% endfor %}
 {% else %}
-    <div class="container text-center"><p>Keine Profile gefunden</p></div>
+    <tr>
+        <td colspan="3">
+            <div class="mx-auto text-center">Keine Profile gefunden</div>
+        </td>
+    </tr>
 {% endif%}
