--- a/profiles/templates/abstract/base.html
+++ b/profiles/templates/abstract/base.html
@@ -2,11 +2,11 @@
 {% load i18n %}
 
 <!DOCTYPE html>
-<html lang="{{ LANGUAGE_CODE }}" data-bs-theme="dark">
+<html lang="{{ request.LANGUAGE_CODE }}" data-bs-theme="dark">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{% block title %}Judo Profile{% endblock %}</title>
+        <title>{% block title %}{% translate "Judo Profiles" %}{% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <style>
@@ -37,36 +37,36 @@
         <header class="sticky-top">
             <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="{% url "profiles-home" %}">Judo Profile</a>
+                    <a class="navbar-brand" href="{% url "profiles-home" %}">{% translate "Judo Profiles" %}</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div id="nav" class="collapse navbar-collapse">
                         <div class="navbar-nav me-auto d-flex justify-content-center">
                             {% if request.user.is_authenticated %}
-                                <a class="nav-link {% block profiles %}{% endblock %}" href="{% url "profiles-profiles" %}">Übersicht</a>
+                                <a class="nav-link {% block profiles %}{% endblock %}" href="{% url "profiles-profiles" %}">{% translate "Dashboard" %}</a>
                                 {% if request.user.profile %}
-                                    <a class="nav-link {% block own %}{% endblock %}" href="{% url "profiles-profile" request.user.username %}">Eigenes Profil</a>
+                                <a class="nav-link {% block own %}{% endblock %}" href="{% url "profiles-profile" request.user.username %}">{% translate "Own profile"%}</a>
                                 {% endif %}
                                 {% block actions %}{% endblock %}
                                 {% if request.user.is_superuser %}
-                                    <a class="nav-link {% block manage %}{% endblock %}" href="{% url "users-manage" %}">Benutzerverwaltung</a>
+                                    <a class="nav-link {% block manage %}{% endblock %}" href="{% url "users-manage" %}">{% translate "User management" %}</a>
                                 {% endif %}
                                 {% block admin_actions %}{% endblock %}
                             </div>
                             <div class="navbar-nav d-flex justify-content-end">
                                 <span class="nav-link">Hallo {{ request.user.first_name|default:request.user.username }}</span>
                                 <button id="theme-selector" class="btn btn-secondary btn-sm" onclick="change_color_theme()"></button>
-                                <a class="nav-link {% block update %}{% endblock %}" href="{% url "users-update" %}">Konto verwalten</a>
-                                <a class="nav-link" href="{% url "users-logout" %}">Abmelden</a>
+                                <a class="nav-link {% block update %}{% endblock %}" href="{% url "users-update" %}">{% translate "Manage account" %}</a>
+                                <a class="nav-link" href="{% url "users-logout" %}">{% translate "Logout" %}</a>
                             {% else %}
                         </div>
                         <div class="navbar-nav d-flex">
                             <button id="theme-selector" class="btn btn-secondary btn-sm" onclick="change_color_theme()">Auto</button>
-                            <a class="nav-link {% block login %}{% endblock %}" href="{% url "users-login" %}">Anmelden</a>
-                            <a class="nav-link {% block register %}{% endblock %}" href="{% url "users-register" %}">Mit Schlüssel Registrieren</a>
+                            <a class="nav-link {% block login %}{% endblock %}" href="{% url "users-login" %}">{% translate "Login" %}</a>
+                            <a class="nav-link {% block register %}{% endblock %}" href="{% url "users-register" %}">{% translate "Register with key" %}</a>
                             {% endif %}
-                            <a class="nav-link {% block about %}{% endblock %}" href="{% url "profiles-about" %}">Über</a>
+                            <a class="nav-link {% block about %}{% endblock %}" href="{% url "profiles-about" %}">{% translate "About" %}</a>
                         </div>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
             </nav>
         </header>
         <div id="noscript" class="container position-absolute top-50 start-50 translate-middle text-center alert-danger alert">
-            <h4>Diese Seite funktioniert nur mit Javascript - für die Nutzung bitte aktivieren</h4>
+            <h4>{% translate "This site only works with Javascript - to use it please activate it" %}</h4>
         </div>
         <div id="script" class="mx-2">
             {% block content %}{% endblock %}
