--- a/profiles/templates/abstract/profile_base.html
+++ b/profiles/templates/abstract/profile_base.html
@@ -1,5 +1,6 @@
 {% extends "abstract/base.html" %}
 {% load static %}
+{% load i18n %}
 
 {% block style %}
     <link rel="stylesheet" href="{% static "style/main.css" %}">
@@ -17,14 +18,14 @@
             <table>
                 <tr>
                     <td>
-                        <p id="title" style="margin-top: 1rem;"><b>Kämpferprofil von:</b> {% block name %}{% endblock %}</p>
+                        <p id="title" style="margin-top: 1rem;"><b>{% translate "Fighter profile of" %}:</b> {% block name %}{% endblock %}</p>
                         <div  id="general_info" class="d-flex align-items-center flex-wrap justify-content-center mb-1">
                             {% block general_info %}{% endblock %}
                             <div>
                                 <table>
                                     <tr>
                                         <td>
-                                            <label class="form-check-label" for="side_left">Linkskämpfer*in</label>
+                                            <label class="form-check-label" for="side_left">{% translate "Left-handed fighter" %}</label>
                                         </td>
                                         <td>
                                             <input type="checkbox" class="form-check-input" id="side_left" name="left" value="L" {% block opts_left %}required{% endblock %}>
@@ -32,7 +33,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <label class="form-check-label" for="side_right">Rechtskämpfer*in</label>
+                                            <label class="form-check-label" for="side_right">{% translate "Right-handed fighter" %}</label>
                                         </td>
                                         <td>
                                             <input type="checkbox" class="form-check-input" id="side_right" name="right" value="R" {% block opts_right %}required{% endblock %}>
@@ -54,14 +55,14 @@
                     {% block delete_positions %}{% endblock %}
                 </div>
                 <div id="choices" class="my-3 mx-auto" style="width: fit-content;">
-                    <span>Rechte Hand :</span>
+                    <span>{% translate "Right hand" %} :</span>
                     <div class="r position option 1" id="oR1">1</div>
                     <div class="r position option 2" id="oR2">2</div>
                     <div class="r position option 3" id="oR3">3</div>
                     <div class="r position option 4" id="oR4">4</div>
                     <br>
                     <br>
-                    <span>Linke Hand :</span>
+                    <span>{% translate "Left hand" %} :</span>
                     <div class="l position option 1" id="oL1">1</div>
                     <div class="l position option 2" id="oL2">2</div>
                     <div class="l position option 3" id="oL3">3</div>
@@ -84,7 +85,7 @@
         <div class="border rounded m-2" style="min-width: 0;">
             <div class="table-responsive container" style="padding-left: unset; padding-right: unset; width: unset;"> 
                 <table id="own" class="table table-borderless caption-top m-2 text-nowrap" style="width: auto;">
-                    <caption id="own_techniques" class="text-center">Eigene Techniken</caption>
+                    <caption id="own_techniques" class="text-center">{% translate "Own techniques" %}</caption>
                     <tr class="align-bottom">
                         <td>
                             <div class="border rounded text-center">
@@ -140,19 +141,19 @@
             <div class="mx-auto border rounded d-flex flex-wrap justify-content-center" style="width: fit-content;">
                 <div class="rank m-3">
                     <table id="special_rank" class="table table-borderless caption-top mb-0">
-                        <caption class="text-center">Spezialtechniken</caption>
+                        <caption class="text-center">{% translate "Special techniques" %}</caption>
                         {% block special %}{% endblock %}
                     </table>
                 </div>
                 <div class="rank m-3">
                     <table id="ground_rank" class="table table-borderless caption-top mb-0">
-                        <caption class="text-center">Bodentechniken</caption>
+                        <caption class="text-center">{% translate "Ground techniques" %}</caption>
                         {% block ground %}{% endblock %}
                     </table>
                 </div>
                 <div class="rank m-3">
                     <table id="combination_rank" class="table table-borderless caption-top mb-0">
-                        <caption class="text-center">Kombinationen</caption>
+                        <caption class="text-center">{% translate "Combinations" %}</caption>
                         {% block combination %}{% endblock %}
                     </table>
                 </div>
