--- a/profiles/templates/profiles.html
+++ b/profiles/templates/profiles.html
@@ -1,7 +1,10 @@
 {% extends "abstract/base.html" %}
 {% load has_group %}
+{% load i18n %}
 
-{% block title %}Übersicht{% endblock %}
+{% block title %}
+{% translate "Dashboard" %}
+{% endblock %}
 
 {% block style %}
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
@@ -11,21 +14,21 @@
 
 {% block actions %}
     {% if perms.profiles.add_profile %}
-        <a class="nav-link" href="{% url "profiles-new" %}">Neues Profil</a>
+        <a class="nav-link" href="{% url "profiles-new" %}">{% translate "New profile" %}</a>
     {% endif %}
 {% endblock %}
 
 {% block content %}
     <div class="container">
         <input class="form-control mx-auto" type="search"
-            name="search" placeholder="Profil suchen..."
+            name="search" placeholder="{% translate "Search profile"%}..."
             hx-post=""
             hx-trigger="input changed delay:500ms, keyup[key=='Enter'], load"
             hx-target="#profiles"
             hx-headers='{"X-CSRFTOKEN": "{{ csrf_token }}"}'>
         <table class="table mx-auto mt-4" style="max-width: 40rem;">
             <thead>
-                <th>Name</th>
+                <th>{% translate "Name" %}</th>
                 <th></th>
                 <th></th>
             </thead>
