--- a/judo_profiles/templates/abstract/base.html
+++ b/judo_profiles/templates/abstract/base.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}{% translate "Judo Profiles" %}{% endblock %}</title>
+        <link rel="icon" href="{% static "favicon.svg" %}" type="image/svg+xml">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <style>
@@ -37,7 +38,7 @@
         <header class="sticky-top">
             <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="{% url "profiles-home" %}">{% translate "Judo Profiles" %}</a>
+                    <a class="navbar-brand" href="{% url "profiles-home" %}"><img src="{% static "favicon.svg" %}" alt="Logo" height="28" class="d-inline-block align-text-top me-2">{% translate "Judo Profiles" %}</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
