--- a/judo_profiles/templates/profiles/new.html
+++ b/judo_profiles/templates/profiles/new.html
@@ -52,7 +52,8 @@
         <input class="form-control" type="number" id="year" min="1900" max="2099" step="1" value="{{ profile.year|default:2007 }}" placeholder="{% translate "Year group" %}" size="5" required>
     </div>
     <div>
-        <input class="form-control" type="number" id="weight" min="30" max="200" step="1" placeholder="{% translate "Weight" %} (kg)" value="{{ profile.weight|default:"" }}" size="9" required>
+        <input class="form-control" type="number" id="weight" min="20" max="500" step="0.1" placeholder="{% translate "Weight" %} (kg)" size="9" required>
+        <script>document.getElementById("weight").value = "{{ profile.weight|default:"" }}".replace(",", ".")</script>
     </div>
 {% endblock %}
 
