--- a/judo_profiles/templates/profiles/profile.html
+++ b/judo_profiles/templates/profiles/profile.html
@@ -110,8 +110,8 @@
             colorSelected(position.className[0] + " " + position.className.slice(-1), "var(--bs-body-color)")
             placeRelative(
                 position,
-                pos.dataset["y"],
-                pos.dataset["x"]
+                pos.dataset.y.replace(",", "."),
+                pos.dataset.x.replace(",", ".")
             )
         })
 
