--- a/judo_profiles/templates/abstract/base.html
+++ b/judo_profiles/templates/abstract/base.html
@@ -38,7 +38,7 @@
         <header class="sticky-top">
             <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="{% url "profiles-home" %}"><img src="{% static "favicon.svg" %}" alt="Logo" height="28" class="d-inline-block align-text-top me-2">{% translate "Judo Profiles" %}</a>
+                    <a class="navbar-brand" href="{% url "profiles-home" %}"><img src="{% static "favicon.svg" %}" alt="Logo" height="28" class="d-inline-block align-text-top"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
